Corrected stylesheet references.

--- a/public/500.html
+++ b/public/500.html
@@ -5,8 +5,8 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <meta name="description" content="TicketMule support ticket tracking" />
   <title>Internal Server Error (500) - TicketMule</title>
-  <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
 </head>
 
